--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <title>Travelgram | Perfil de viagens</title>
     <link rel="stylesheet" href="styles/index.css" />
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi veritatis
+      eius repudiandae alias quam delectus ullam, molestiae aspernatur provident
+      et. Aliquam molestiae repellat, excepturi rerum voluptatum exercitationem
+      magni asperiores delectus!
+    </p>
+  </body>
 </html>
