--- a/index.html
+++ b/index.html
@@ -12,5 +12,25 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-surface-color">
+      <nav class="container">
+        <a href="#" id="logo"><img src="assets/Logo.svg" alt="Logomarca" /></a>
+        <ul id="primary-menu">
+          <li>
+            <a href="#"
+              ><img src="assets/icons/MagnifyingGlass.svg" alt="icone lupa"
+            /></a>
+          </li>
+          <li><a href="#">Explorer</a></li>
+          <li><a href="#">Minhas Viagens</a></li>
+          <li>
+            <a href="#"
+              ><img src="assets/Profile pic.png" alt="imagem de perfil"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </body>
 </html>
