--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travelgram | Perfil de viagens</title>
+
     <link rel="stylesheet" href="styles/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;700&display=swap"
@@ -22,7 +24,7 @@
               ><img src="assets/icons/MagnifyingGlass.svg" alt="icone lupa"
             /></a>
           </li>
-          <li><a href="#">Explorer</a></li>
+          <li><a href="#">Explorar</a></li>
           <li><a href="#">Minhas Viagens</a></li>
           <li>
             <a href="#"
